test scroll fix on mobile

--- a/css/_tray.scss
+++ b/css/_tray.scss
@@ -6,7 +6,7 @@ $tray-height: 40px;
 	width: 100%;
 
 	button {
-		background: #aaccff;
+		background: #aaa;
 		color: white;
 		height: $tray-height;
 		width: 20%;
