--- a/css/build.css
+++ b/css/build.css
@@ -13,7 +13,7 @@
   bottom: 0;
   width: 100%; }
   .tray button {
-    background: #aaccff;
+    background: #aaa;
     color: white;
     height: 40px;
     width: 20%; }
